# SummsUpIA

./: .gitignore  README.md
api/: main.py  pyproject.toml  requirements.txt
api/service/: dalle_service.py  openai_service.py
api/utils/: pdf_split.py
summsup/: package-lock.json  package.json
summsup/public/: index.html
summsup/src/: App.tsx
summsup/src/components/: InputForm.tsx  ResultBox.tsx
